<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">New account</string>
    <string name="existing_account">Existing account</string>
    <string name="welcome">Welcome</string>
    <string name="shoe_store_description">Welcome to the Shoe Store. That place where you are going to freak out due to this awesome design. I can\'t believe it!</string>
    <string name="start">Start</string>
    <string name="instruction">Instruction</string>
    <string name="shoe_store_instruction">In the next screen, you will fine a list with the best shoes in the world. \n\nYou can scroll the list to find the perfect shoes that fit your expectations. \n\nOnce you have found them, click on them to get more details like the bla, ble and bli.</string>
    <string name="next">Next</string>
    <string name="shoe_list_button">shoe_list_button</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_shoe">New Shoe</string>
    <string name="shoe_item_name_size_text">%s - %s</string>
</resources>
