<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <TextView
            android:id="@+id/login_email_tv"
            style="@style/ShoeStoreStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="@+id/login_email_et"
            app:layout_constraintEnd_toStartOf="@+id/login_email_et"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_email_et" />

        <EditText
            android:id="@+id/login_email_et"
            style="@style/ShoeStoreStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/login_password_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/login_password_tv"
            style="@style/ShoeStoreStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="@+id/login_password_et"
            app:layout_constraintEnd_toStartOf="@+id/login_password_et"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_password_et" />

        <EditText
            android:id="@+id/login_password_et"
            style="@style/ShoeStoreStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_et" />

        <Button
            android:id="@+id/login_new_account_button"
            style="@style/ShoeStoreStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_existing_account_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_et" />

        <Button
            android:id="@+id/login_existing_account_button"
            style="@style/ShoeStoreStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_new_account_button"
            app:layout_constraintTop_toBottomOf="@+id/login_password_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>